--- a/CalculoTotalJS/index.html
+++ b/CalculoTotalJS/index.html
@@ -39,9 +39,7 @@
                 <h4 class="total" id="total">Total: $0</h4>
                 <h4 class="cant" id="cant">Cantidad: 0</h4>
                 <h4 class="color" id="color">color: </h4>
-                <div id="divColor">
-                    <p id="seeColor"></p>
-                </div>
+                <div id="divColor"></div>
             </div>
         </section>
     </main>
