--- a/CondicionesJS/index.html
+++ b/CondicionesJS/index.html
@@ -13,32 +13,34 @@
             <h1>Condiciones JS</h1>
         </div>
     </header>
-    <main class="container">
-        <section>
+    <main class="tarea">
+        <section class="DesP1">
             <div>
                 <h2>Desafio parte 1</h2>
                 <img src="./assets/imgParte1/amogus.png" alt="amogus" height="auto" width="300px" id="amon" class="">
             </div>
         </section>
-        <section>
+        <section class="DesP2">
             <h2>Desafio parte 2</h2>
             <h3>Puedes llevar hasta 10 Stickers en total</h3>
-            <div>
-                <img src="./assets/imgParte2/Chayanne.png" alt="Chayanne" height="auto" width="200px">
-                <input type="number" id="sticker1">
-            </div>
-            <div>
-                <img src="./assets/imgParte2/Cristo.png" alt="CristoRey" height="auto" width="200px">
-                <input type="number" id="sticker2">
-            </div>
-            <div>
-                <img src="./assets/imgParte2/Thonk.png" alt="Thonk" height="auto" width="200px">
-                <input type="number" id="sticker3">
+            <div class="container">
+                <div>
+                    <img src="./assets/imgParte2/Chayanne.png" alt="Chayanne" height="200px" width="200px"><br>
+                    <input type="number" id="sticker1">
+                </div>
+                <div>
+                    <img src="./assets/imgParte2/Cristo.png" alt="CristoRey" height="200px" width="200px"><br>
+                    <input type="number" id="sticker2">
+                </div>
+                <div>
+                    <img src="./assets/imgParte2/Thonk.png" alt="Thonk" height="200px" width="200px"><br>
+                    <input type="number" id="sticker3">
+                </div>
             </div>
             <p id="text1">Llevas 0 Stickers seleccionados</p>
             <button type="button" class="btn" id="veri">Verificar</button>
         </section>
-        <section>
+        <section class="DesP3">
             <h2>Desafio parte 3</h2>
             <h3>Ingresa el password</h3>
             <select class="passOne" name="passOne" id="passOne">
@@ -73,7 +75,7 @@
                 <option value="7">7</option>
                 <option value="8">8</option>
                 <option value="9">9</option>
-            </select>
+            </select><br>
             <button type="button" class="btn" id="pass">Ingresar</button>
             <p id="text2"></p>
         </section>
